# gnome-games

./: COPYING.README  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
glchess/src/: glchess.vala
po/: hu.po  sk.po
